# testamaton

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  genapidoc.sh  getversion.py  noxfile.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  python-package.yml
docs/: conf.py  index.rst  testamaton.rst
docs/source/: conf.py  index.rst
examples/: example_simple.py  example_simple2.py
src/testamaton/: __init__.py  exceptions.py  reporter.py  sessions.py  standard.py  test_case.py
src/testamaton/debug/: measurement.py
